# provisionR

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.tsx
gui/src/components/: ConfigSection.tsx  KickstartSection.tsx
provisionR/: __init__.py  app.py  config.py  database.py  models.py  routes.py
provisionR/services/: __init__.py  export_service.py  kickstart_service.py  password_service.py
provisionR/static/: .gitkeep  index.html
provisionR/templates/: default.ks.j2
provisionR/utils/: __init__.py  password_generator.py  password_hasher.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_database.py  test_models.py  test_password_generator.py  test_password_hasher.py  test_routes.py  test_services.py
